@@ -16,6 +16,11 @@ HISTORY
 0.1-beta-2 (SVN/Unreleased)
 --------------------------
 
+* Taken Marc Petitmermet code source and added it to Silva Forum code. Added
+  a view_include.pt, and include.css to handle the styles of a Silva Document
+  with comments. Added to the FiveViewable class a switch to check for an
+  'include' parameter that gets the code source template.
+
 * Fixed text formatting to include links, moved replace_links call from the
   view_topic.pt to the format_text methog in view.py.
 
